@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 dnl Created by Anjuta application wizard.
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(gnome-mplayer, 1.0.2)
+AM_INIT_AUTOMAKE(gnome-mplayer, 1.0.3beta)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
